The trainer works as it should some little fixes required  - refresh textea should work in all variants

--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
 
 
 <script src='./bower_components/angular/angular.js'></script>
+<script src='./bower_components/angular-ui-event/dist/event.js'></script>
 <script src='./bower_components/angular-route/angular-route.js'></script>
 <script src='./bower_components/lodash/lodash.js'></script>
+<script src='./js/vendor/jquery.js'></script>
 
 <script src='./js/app.js'></script>
 <script src='./js/routes.js'></script>
 
+<!--Classes-->
+<script src='js/classes/FlashCardClass.js'></script>
 <!--Services-->
 <script src='js/services/services.js'></script>
 
