--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="css/style.sass" media="screen" rel="stylesheet" type="text/css"/>
     <link href="css/trainer.css" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="css/quizzer.css" media="screen" rel="stylesheet" type="text/css"/>
+    <meta charset="utf-8">
 
 </head>
 <body ng-controller="ShellController">
@@ -21,6 +23,8 @@
         <li ng-class="{ active: isActiveTab('trainer') }"><a href="#/trainer">Trainer</a>
         <li>
         <li ng-class="{ active: isActiveTab('about') }"><a href="#/about">About</a>
+        <li>
+        <li ng-class="{ active: isActiveTab('mc') }"><a href="#/mc">Boot</a>
         <li>
     </ul>
 
@@ -39,8 +43,13 @@
 
 <!--Classes-->
 <script src='js/classes/FlashCardClass.js'></script>
+<!--Directives-->
+<script src='js/directives/err-src.js'></script>
+<script src='js/directives/my-enter.js'></script>
+
 <!--Services-->
 <script src='js/services/services.js'></script>
+<script src='js/services/multiple-choice.js'></script>
 
 
 <!--Controller-->
@@ -49,6 +58,7 @@
 <script src='js/controllers/shell-controller.js'></script>
 <script src='js/controllers/trainer-controller.js'></script>
 <script src='js/controllers/word-controller.js'></script>
+<script src='js/controllers/multi-choice-controller.js'></script>
 
 <!-- livereload snippet to avoid having to enable the browser extention -->
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
