--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
     <h1><a href="#/">VocabTrainer</a></h1>
 
     <ul class="nav nav-tabs" style="margin-bottom: 20px">
-        <li ng-class="{ active: isActiveTab('words') }"><a href="#/">Words</a>
-        <li>
         <li ng-class="{ active: isActiveTab('trainer') }"><a href="#/trainer">Trainer</a>
         <li>
-        <li ng-class="{ active: isActiveTab('about') }"><a href="#/about">About</a>
+        <li ng-class="{ active: isActiveTab('simple-trainer') }"><a href="#/simpleTrainer">Simple</a>
         <li>
-        <li ng-class="{ active: isActiveTab('mc') }"><a href="#/mc">Boot</a>
-        <li>
-        <li ng-class="{ active: isActiveTab('ranji_multi') }"><a href="#/ranji_multi">Ranji Multi</a>
+        <li ng-class="{ active: isActiveTab('multi-choice-trainer') }"><a href="#/multiChoiceTrainer">MultiChoice</a>
         <li>
     </ul>
 
@@ -57,13 +53,10 @@
 
 
 <!--Controller-->
-<script src='js/controllers/about-controller.js'></script>
-<script src='js/controllers/main-controller.js'></script>
+<script src='js/controllers/simple-trainer-controller.js'></script>
+<script src='js/controllers/multi-choice-trainer-controller.js'></script>
 <script src='js/controllers/shell-controller.js'></script>
 <script src='js/controllers/trainer-controller.js'></script>
-<script src='js/controllers/word-controller.js'></script>
-<script src='js/controllers/multi-choice-controller.js'></script>
-<script src='js/controllers/randji-multi-choice-controller.js'></script>
 
 <!-- livereload snippet to avoid having to enable the browser extention -->
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
